kube/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  namespace: development
  labels:
    app: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels: 
        app: blog
    spec:
      containers:
      - name: blog-container
        image: test:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
