kube/load_balancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: load-balancer-service
  namespace: development
spec:
  selector:
    app: blog
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
