kube/registry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-registry
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-registry
  template:
    metadata:
      labels:
        app: local-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: local-registry
  namespace: development
spec:
  type: NodePort
  selector:
    app: local-registry
  ports:
  - protocol: TCP  
    port: 5000
    targetPort: 5000
    nodePort: 30500
