kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: development
  labels:
    app: blog
spec:
  rules:
  - host: alabaster-captain.local
    http:
      paths:
      - backend:
          service:
            name: load-balancer-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
